corrected header & background spacing with absolute + relative parent trick.

--- a/atxgd_general.css
+++ b/atxgd_general.css
@@ -53,14 +53,16 @@ body {
     font-family: "hightower-text", serif;
     font-style: normal;
     font-weight: 400;
+    margin-bottom: 16px;
+    position: relative;
 }
 
 .atxgd_header-backer {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 25vmin;
-    max-height: 250px;
+    height: 100%;
+    max-height: 300px;
     min-height: 100px;
     background-image: url('./assets/banner/ATX-GD-Web-banner-photo-onlyCrop1.webp');
     background-repeat: no-repeat;
@@ -119,7 +121,8 @@ body {
     filter: drop-shadow(5px 5px 5px var(--shadow-grey));
     box-shadow: inset 0.1em 0.1em 0.1em 0 var(--light-blue), inset -0.1em -0.1em 0.1em 0 var(--shadow-grey);
     left: 50%;
-    top: 48px;
+    transform: translateX(-50%);
+    top: 64px;
 }
 #atxgd_mobile-burger:hover {
     background-color: var(--clear-sky-blue);
@@ -135,8 +138,8 @@ body {
     .atxgd_nav-menu {
         flex-direction: column;
         margin-left: 50%;
-        transform: translateX(-25%);
-        top: 4px;
+        transform: translateX(-50%);
+        top: 20px;
         padding-top: 4px;
         gap: 1em;
         background-color: var(--deep-blue);
@@ -168,10 +171,8 @@ body {
 }
 
 .atxgd_content {
-    margin-top: 15vmin;
+    margin: 0 auto;
     width: 90%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 /*__footer__*/
